pootle/static/css/style.css
/* ... */
table.sortable th input
{
    float: left;
    margin-right: 5px;
}

html[dir="rtl"] table.sortable th input
{
    float: right;
    margin-right: 0;
    margin-left: 5px;
}

.sortkey
{
    display: none;
}

/* PAGER */

div.pagination-control
{
    margin: 1.5em 0;
}

ul.pager li
{
    display: inline-block;
}

ul.pager li a,
ul.pager li a:visited
{
    border: 1px solid #d9d9d9;
    text-decoration: none;
}

ul.pager li a:hover
{
    border-color: #68b8d4;
    background-color: #b3dbe9;
}

ul.pager li span.current-link,
ul.pager li a
{
    margin: 1px;
    padding: 0.2em 0.7em 0.3em;
}

ul.pager li span.current-link
{
    background-color: #68b8d4;
    color: #fff;
    border: 1px solid #0489b7;
    font-weight: bold;
}

html[dir="ltr"] ul.pager li:first-child > *
{
    padding-left: 1em;
    -webkit-border-radius: 1em 0 0 1em;
       -moz-border-radius: 1em 0 0 1em;
            border-radius: 1em 0 0 1em;
}

html[dir="ltr"] ul.pager li:last-child > *
{
    padding-right: 1em;
    -webkit-border-radius: 0 1em 1em 0;
       -moz-border-radius: 0 1em 1em 0;
            border-radius: 0 1em 1em 0;
}

html[dir="rtl"] ul.pager li:first-child > *
{
    padding-right: 1em;
    -webkit-border-radius: 0 1em 1em 0;
       -moz-border-radius: 0 1em 1em 0;
            border-radius: 0 1em 1em 0;
}

html[dir="rtl"] ul.pager li:last-child > *
{
    padding-left: 1em;
    -webkit-border-radius: 1em 0 0 1em;
       -moz-border-radius: 1em 0 0 1em;
            border-radius: 1em 0 0 1em;
}


/*
 * OVERVIEW PAGE
 */

#overview-actions li
{
    background-color: inherit;
}

.overview-actions-container
{
    padding: 1em 0;
    border-top: 1px solid #eee;
}

.overview-actions-container.first
{
    border-top: 0 none;
}

.overview-actions-group
{
    width: 20%;
    font-size: 85%;
    float: left;
}

.overview-actions-content
{
    width: 75%;
    margin-left: 25%;
}

html[dir="rtl"] .overview-actions-content
{
    margin-left: 0;
    margin-right: 25%;
}

#overview-actions-translate-offline a
{
    color: #cc6633;
}

#overview-actions-translate-offline li
{
    display: inline;
}

#overview-actions-translate-offline li.odd
{
    margin-right: 25%;
}

html[dir="rtl"] #overview-actions-translate-offline li.odd
{
    margin-right: 0;
    margin-left: 25%;
}

#overview-actions-manage a
{
    color: #cc3366;
}

.overview-description-toggle
{
    display: block;
    margin-top: 0.5em;
    text-align: right;
}

html[dir="rtl"] .overview-description-toggle
{
    text-align: left;
}

#overview-description-tp,
#overview-description-project,
#overview-description-language
{
    margin: 1em 0;
}

/* Inline editing */

.markup-body:hover .js-edit-details
{
    visibility: visible;
}


/*
 * HEADER
 */

.header
{
    background-color: #f8f8f8;
    padding: 0 1.5em;
    border-bottom: 1px solid #d9d9d9;
}

#header-tabs
{
    margin-top: -1px;
}

#header-meta
{
    min-height: 50px;
    line-height: 2.7;
}

/* Breadcrumbs */

.breadcrumb
{
    font-size: 18px;
    font-weight: normal;
}

.breadcrumb li
{
    float: left;
}

html[dir="rtl"] .breadcrumb li
{
    float: right;
}

.breadcrumb li:before
{
    content: "/";
    color: #999;
    margin: 0 10px;
}

.breadcrumb li:first-child:before
{
    content: "";
    margin: 0;
}

/* Tabs */

#tabs
{
    height: 34px;
}

#tabs li
{
    float: left;
}

html[dir="rtl"] #tabs li
{
    float: right;
}

#tabs a
{
    background-color: inherit;
    border: 1px solid transparent;
    color: #999;
    display: block;
    height: 30px;
    line-height: 2.2;
    margin: 3px 4px 0;
    padding: 0 11px;
    text-decoration: none;
}

#tabs a:hover
{
    /* TODO: merge with active tabs */
    background-color: #fff !important;
    border-color: #d9d9d9 #d9d9d9 #fff;
    border-style: solid;
}

#tabs a.admintab,
#tabs.admin a,
#tabs a .admin
{
    color: #c30 !important;
}

body#dashboard #tabs a.dashboard,
body#settings #tabs a.settings,
body#profile #tabs a.profile,
body#password #tabs a.password,
body#admindashboard #tabs a.admindashboard,
body#admingeneral #tabs a.admingeneral,
body#adminusers #tabs a.adminusers,
body#adminlanguages #tabs a.adminlanguages,
body#adminprojects #tabs a.adminprojects,
body#adminpermissions #tabs a.adminpermissions,
body#adminstaticpages #tabs a.adminstaticpages,
body#projectoverview #tabs a.projectoverview,
body#projectadmin #tabs a.projectadmin,
body#projectperm #tabs a.projectperm,
body#languageoverview #tabs a.languageoverview,
body#languagenews #tabs a.languagenews,
body#languageadmin #tabs a.languageadmin,
body#tpoverview #tabs a.tpoverview,
body#tpnews #tabs a.tpnews,
body#tptranslate #tabs a.tptranslate,
body#tpterminology #tabs a.tpterminology,
body#tpadminpermissions #tabs a.tpadminpermissions
{
    background-color: #fff;
    border-color: #d9d9d9 #d9d9d9 #fff;
    border-style: solid;
    color: #444;
    font-weight: bold;
}




.title a
{
    unicode-bidi: embed;
}


/* SEARCH */

#search
{
    float: right;
    margin: 6px 0;
}

html[dir="rtl"] #search
{
    float: left;
}

#search-form
{
    position: relative;
    padding: 2px;

    -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.075) inset;
       -moz-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.075) inset;
            box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.075) inset;
}

#search-form,
.search-fields
{
    background-color: #fff;
    border: 1px solid #d9d9d9;
    -webkit-border-radius: 3px;
       -moz-border-radius: 3px;
            border-radius: 3px;
}

#search-form.focused,
.search-fields
{
    -webkit-box-shadow: 0 0 2px #d9d9d9;
       -moz-box-shadow: 0 0 2px #d9d9d9;
            box-shadow: 0 0 2px #d9d9d9;
}

.search-wrapper
{
    font-size: 0;
    white-space: nowrap;
}

.search-wrapper input[type="text"],
.search-wrapper .btn
{
    vertical-align: middle;
}

#search-form input[type="text"]
{
    border: 0 none;
    height: 16px;
    line-height: 16px;
    padding: 0px 4px;
    width: 145px;
    background-color: #fff;
    color: #d9d9d9;
    font-size: 12px;
    outline: 0;
}
/* ... */

